# ebac-fastapi

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  tarefas.db
